# SOWA

./: .gitignore  README.md  package-lock.json  package.json
backend/: .env.example  README.md  alembic.ini  pyproject.toml  render.yaml  requirements.txt  sql_app.db
backend/alembic/: env.py
backend/alembic/versions/: cf145534fa0f_add_user_role.py
backend/app/: database.py  initial_data.py  main.py  security.py
backend/app/api/: api.py  deps.py
backend/app/api/endpoints/: exam.py  exam_session.py  fraud.py  login.py  users.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  exam.py  exam_session.py  fraud_log.py  prova.py  tentativa.py  turma.py  user.py  usuario.py
backend/app/routers/: auth.py  provas.py  tentativas.py  turmas.py  users.py
backend/app/schemas/: __init__.py  exam.py  exam_session.py  fraud_log.py  prova.py  tentativa.py  turma.py  user.py  usuario.py
backend/app/services/: auth_service.py  exam.py  exam_session.py  fraud.py  prova_service.py  score_calculator.py
backend/app/utils/: dependencies.py  security.py
frontend/: README.md  cypress.config.ts  next.config.ts  package-lock.json  package.json  vercel.json  vite.config.js
frontend/cypress/e2e/: login.cy.ts  register.cy.ts
frontend/src/: App.jsx  api.ts  createExam.ts  login.ts  main.ts  professorDashboard.ts  register.ts  studentDashboard.ts  style.css  takeExam.ts  viewAttempt.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: PrivateRoute.jsx
frontend/utils/: securityMonitor.ts
(+32 files in other folders)
